plugins {
    id 'java'
    id 'application'
    id 'org.javamodularity.moduleplugin' version '1.8.12'
    id 'org.openjfx.javafxplugin' version '0.0.13'
    id 'org.beryx.jlink' version '2.25.0'
}

group 'com.banuh'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

ext {
    junitVersion = '5.10.0'
}

sourceCompatibility = '11'
targetCompatibility = '11'

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

application {
    mainModule = 'com.banuh.frologue'
    mainClass = 'com.banuh.frologue.App'
    applicationDefaultJvmArgs = [
            '--module-path', "${project.buildDir}/libs",
            '--add-modules', 'javafx.controls,javafx.fxml,javafx.media'
    ]
}

javafx {
    version = '17.0.6'
    modules = ['javafx.controls', 'javafx.fxml','javafx.media','javafx.base','javafx.graphics','javafx.controls']
}

dependencies {
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
    implementation 'org.jbox2d:jbox2d-library:2.2.1.1'

    implementation "org.openjfx:javafx-media:17.0.6"
    implementation "org.openjfx:javafx-controls:17.0.6"
    implementation "org.openjfx:javafx-fxml:17.0.6"
    implementation "org.openjfx:javafx-base:17.0.6"
    implementation "org.openjfx:javafx-graphics:17.0.6"
    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
}

test {
    useJUnitPlatform()
}

jlink {
    imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
    launcher {
        name = 'app'
    }
}

jlinkZip {
    group = 'distribution'
}